<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#62A8A4">

    <ImageView
        android:id="@+id/reproductor_default"
        android:layout_width="304dp"
        android:layout_height="343dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        app:srcCompat="@drawable/cassete" />

    <Button
        android:id="@+id/boton_atras"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/img_previous"
        android:textColorHint="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton_play"
        app:layout_constraintStart_toEndOf="@+id/boton_stop" />

    <Button
        android:id="@+id/boton_adelante"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/img_next"
        android:textColorHint="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton_repeat"
        app:layout_constraintStart_toEndOf="@+id/boton_play" />

    <Button
        android:id="@+id/boton_play"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/img_play"
        android:textColorHint="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton_repeat"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/img_repeat"
        android:textColorHint="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/boton_adelante" />

    <Button
        android:id="@+id/boton_stop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/img_stop"
        android:textColorHint="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/boton_atras"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_nombreCancion"
        android:layout_width="173dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reproductor_default"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/tv_nombreArtista"
        android:layout_width="109dp"
        android:layout_height="17dp"
        android:textColor="#71756B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombreCancion"
        app:layout_constraintVertical_bias="0.106" />

    <Button
        android:id="@+id/boton_favorito"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/img_star"
        android:textColorHint="#1A237E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.629" />

</androidx.constraintlayout.widget.ConstraintLayout>