<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <!-- <item
        android:id="@+id/menu_aToz"
        android:title="A->Z" />
    <item
        android:id="@+id/menu_zToa"
        android:title="Z->A" />
    <item
        android:id="@+id/menu_time"
        android:title="Duracion" />
    <item
        android:id="@+id/menu_artistaToz"
        android:title="Artistas" />-->
    <item
        android:id="@+id/menu_loadData"
        android:title="Cargar" />
    <item
        android:id="@+id/menu_deleteData"
        android:title="Borrar Todo" />
</menu>